--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="nav-extended">
     <div class="nav-background" style="opacity: 0.7">
-      <div class="pattern active" style="background-image: url('/assets/images/doodle.png');"></div>
+      <div class="pattern active" style="background-image: url('/assets/images/doodle.webp');"></div>
     </div>
     <div style="display: none;">
       <div id="player"></div>
