change bg navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="nav-extended">
+<nav class="nav-extended" style="background-color: transparent !important;">
     <div class="nav-background" style="opacity: 0.7">
       <div class="pattern active" style="background-image: url('/assets/images/doodle.webp');"></div>
     </div>
