--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,7 +25,7 @@
       <div class="categories-container">
         <ul class="categories container">
           <li class="active"><a href="#all">All</a></li>
-<!--          <li><a href="#abstrak">Abstrak</a></li>          -->
+          <li><a href="#ww">Wuthering Wave</a></li>
         </ul>
       </div>
     </div>
