add spotlight to galeri

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,8 +56,9 @@
     <script src="/assets/js/imagesloaded.pkgd.min.js"></script>
     <script src="/assets/js/masonry.pkgd.min.js"></script>
     <script src="/assets/js/color-thief.min.js"></script>
-    <script src="/assets/js/galleryExpand.js"></script>
+<!--    <script src="/assets/js/galleryExpand.js"></script>-->
     <script src="/assets/js/init.js"></script>
+    <script src="/assets/js/spotlight.bundle.js"></script>
     <script id="dsq-count-scr" src="//painting-mahaputera.disqus.com/count.js" async></script>
     <script>
       $(document).ready(function(){
