add post kre & omeko

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,7 +25,8 @@
       <div class="categories-container">
         <ul class="categories container">
           <li class="active"><a href="#all">All</a></li>
-          <li><a href="#ww">Wuthering Wave</a></li>
+          <li><a href="#d2">Destiny 2</a></li>
+          <li><a href="#evangelion">Evangelion</a></li>
         </ul>
       </div>
     </div>
