--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,6 +27,7 @@
           <li class="active"><a href="#all">All</a></li>
           <li><a href="#d2">Destiny 2</a></li>
           <li><a href="#evangelion">Evangelion</a></li>
+          <li><a href="#pso2ngs">PSO2NGS</a></li>
         </ul>
       </div>
     </div>
