--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,6 +28,8 @@
           <li><a href="#d2">Destiny 2</a></li>
           <li><a href="#evangelion">Evangelion</a></li>
           <li><a href="#pso2ngs">PSO2NGS</a></li>
+          <li><a href="#hsr">Honkai Star Rail</a></li>
+          <li><a href="#other">Etc.</a></li>
         </ul>
       </div>
     </div>
