add google analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,6 +60,16 @@
     <script src="/assets/js/init.js"></script>
     <script src="/assets/js/spotlight.bundle.js"></script>
     <script id="dsq-count-scr" src="//painting-mahaputera.disqus.com/count.js" async></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TFK9146KD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-9TFK9146KD');
+    </script>
+
     <script>
       $(document).ready(function(){
         $(".preloader").fadeOut(3000);
