--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,8 +11,10 @@
       <ul class="right hide-on-med-and-down">
           <li><a href="https://cleone.id">Home</a></li>
           <li><a href="https://blog.cleone.id">Blog</a></li>
-          <li class="active"><a href="https://galeri.cleone.id">Galeri</a></li>
           <li><a href="https://ambience.cleone.id">Ambience</a></li>
+          <li class="active"><a href="https://galeri.cleone.id">Galeri</a></li>
+          <li><a href="https://foto.cleone.id">Foto</a></li>
+          <li><a href="https://art.cleone.id">Art</a></li>
       </ul>
 
       <div class="nav-header center font-style">
@@ -37,15 +39,21 @@
 
   <ul class="side-nav" id="nav-mobile">
       <li>
-          <a href="https://cleone.id"><i class="material-icons">dashboard</i>Main</a>
+          <a href="https://cleone.id"><i class="material-icons">dashboard</i>Home</a>
       </li>
       <li>
           <a href="https://blog.cleone.id"><i class="material-icons">article</i>Blog</a>
       </li>
+      <li>
+          <a href="https://ambiencecleone.id"><i class="material-icons">event</i>Ambience</a>
+      </li>
       <li class="active">
-          <a href="https://galeri.cleone.id"><i class="material-icons">palette</i> Galeri</a>
+          <a href="https://galeri.cleone.id"><i class="material-icons">camera_alt</i> Galeri</a>
       </li>
       <li>
-          <a href="https://ambience.cleone.id"><i class="material-icons">camera_alt</i> Ambience</a>
+          <a href="https://foto.cleone.id"><i class="material-icons">camera_alt</i> Foto</a>
+      </li>
+      <li>
+          <a href="https://art.cleone.id"><i class="material-icons">palette</i> Art</a>
       </li>
   </ul>
