--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,59 +1,54 @@
 <nav class="nav-extended" style="background-color: transparent !important;">
-    <div class="nav-background" style="opacity: 0.7">
-      <div class="pattern active" style="background-image: url('/assets/images/doodle.webp');"></div>
+  <div class="nav-background" style="opacity: 0.7">
+    <div class="pattern active" style="background-image: url('/assets/images/doodle.webp');"></div>
+  </div>
+  <div style="display: none;">
+    <div id="player"></div>
+  </div>
+  <div class="nav-wrapper container">
+    <a href="/" class="brand-logo font-style">Cleone.ID</a>
+    <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="https://cleone.id">Home</a></li>
+      <li><a href="https://blog.cleone.id">Blog</a></li>
+      <li><a href="https://ambience.cleone.id">Ambience</a></li>
+      <li class="active"><a href="https://galeri.cleone.id">Galeri</a></li>
+      <li><a href="https://foto.cleone.id">Foto</a></li>
+      <li><a href="https://art.cleone.id">Art</a></li>
+    </ul>
+
+    <div class="nav-header center font-style">
+      <h1>Galeri Cleone.ID</h1>
+      <div class="tagline">kumpulan screenshoot game komunitas</div>
     </div>
-    <div style="display: none;">
-      <div id="player"></div>
-    </div>
-    <div class="nav-wrapper container">
-      <a href="/" class="brand-logo font-style">Cleone.ID</a>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-          <li><a href="https://cleone.id">Home</a></li>
-          <li><a href="https://blog.cleone.id">Blog</a></li>
-          <li><a href="https://ambience.cleone.id">Ambience</a></li>
-          <li class="active"><a href="https://galeri.cleone.id">Galeri</a></li>
-          <li><a href="https://foto.cleone.id">Foto</a></li>
-          <li><a href="https://art.cleone.id">Art</a></li>
+  </div>
+
+  <!-- <div class="categories-wrapper amber darken-2">
+    <div class="categories-container">
+      <ul class="categories container">
+        <li class="active"><a href="#all">All</a></li>
       </ul>
-
-      <div class="nav-header center font-style">
-        <h1>Galeri Cleone.ID</h1>
-        <div class="tagline">kumpulan screenshoot game komunitas</div>
-      </div>
     </div>
+  </div> -->
+</nav>
 
-    <div class="categories-wrapper amber darken-2">
-      <div class="categories-container">
-        <ul class="categories container">
-          <li class="active"><a href="#all">All</a></li>
-          <li><a href="#d2">Destiny 2</a></li>
-          <li><a href="#evangelion">Evangelion</a></li>
-          <li><a href="#pso2ngs">PSO2NGS</a></li>
-          <li><a href="#hsr">Honkai Star Rail</a></li>
-          <li><a href="#other">Etc.</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <ul class="side-nav" id="nav-mobile">
-      <li>
-          <a href="https://cleone.id"><i class="material-icons">dashboard</i>Home</a>
-      </li>
-      <li>
-          <a href="https://blog.cleone.id"><i class="material-icons">article</i>Blog</a>
-      </li>
-      <li>
-          <a href="https://ambiencecleone.id"><i class="material-icons">event</i>Ambience</a>
-      </li>
-      <li class="active">
-          <a href="https://galeri.cleone.id"><i class="material-icons">camera_alt</i> Galeri</a>
-      </li>
-      <li>
-          <a href="https://foto.cleone.id"><i class="material-icons">camera_alt</i> Foto</a>
-      </li>
-      <li>
-          <a href="https://art.cleone.id"><i class="material-icons">palette</i> Art</a>
-      </li>
-  </ul>
+<ul class="side-nav" id="nav-mobile">
+  <li>
+    <a href="https://cleone.id"><i class="material-icons">dashboard</i>Home</a>
+  </li>
+  <li>
+    <a href="https://blog.cleone.id"><i class="material-icons">article</i>Blog</a>
+  </li>
+  <li>
+    <a href="https://ambiencecleone.id"><i class="material-icons">event</i>Ambience</a>
+  </li>
+  <li class="active">
+    <a href="https://galeri.cleone.id"><i class="material-icons">camera_alt</i> Galeri</a>
+  </li>
+  <li>
+    <a href="https://foto.cleone.id"><i class="material-icons">camera_alt</i> Foto</a>
+  </li>
+  <li>
+    <a href="https://art.cleone.id"><i class="material-icons">palette</i> Art</a>
+  </li>
+</ul>
