change image source

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,13 +23,13 @@
     </div>
   </div>
 
-  <!-- <div class="categories-wrapper amber darken-2">
+  <div class="categories-wrapper amber darken-2">
     <div class="categories-container">
       <ul class="categories container">
-        <li class="active"><a href="#all">All</a></li>
+        <li class="active"><a href="#all">Cleone.ID</a></li>
       </ul>
     </div>
-  </div> -->
+  </div>
 </nav>
 
 <ul class="side-nav" id="nav-mobile">
