--- a/_includes/header.html
+++ b/_includes/header.html
@@ -101,3 +101,17 @@
         }
       }
     </style>
+    <style>
+      /* Disable text selection */
+      body {
+          user-select: none;         /* CSS modern */
+          -webkit-user-select: none; /* Safari */
+          -moz-user-select: none;    /* Firefox */
+          -ms-user-select: none;     /* IE/Edge */
+      }
+      
+      /* Optional: Disable pointer events on images (tidak bisa diklik kanan) */
+      img {
+          pointer-events: none;
+      }
+    </style>
